--- a/lang/de.json
+++ b/lang/de.json
@@ -57,7 +57,7 @@
   "auto_retention_info": "Informationen zur automatischen Aufbewahrung",
   "available_backups": "Verfügbare Backups",
   "back": "Zurück",
-  "backup": "Sicherung",
+  "backup": "Sicherung & Import",
   "backup_create_error": "Fehler beim Erstellen des Backups: {error}",
   "backup_created": "Backup erstellt: {name}",
   "backup_no_file": "Keine Datei bereitgestellt",
@@ -714,7 +714,83 @@
   "delete_after_expiry_days_help": "Entzieht den Zugriff auf den Media-Server nach X Tagen. Plex: Der Benutzer wird nicht aus Plex gelöscht, sondern nur die Freigaben werden entfernt.",
   "user_id": "User ID",
   "task.stream_enforcer": "Stream-Überwachung",
-  "task_description.stream_enforcer": "Setzt Streaming-Richtlinien durch und überwacht aktive Sitzungen."
+  "task_description.stream_enforcer": "Setzt Streaming-Richtlinien durch und überwacht aktive Sitzungen.",
+  "tautulli_import_title": "Tautulli importieren",
+  "tautulli_import_desc": "Lade deine Datei",
+  "tautulli_db_file_label": "Tautulli-Datenbankdatei (.db)",
+  "start_import": "Import starten",
+  "tautulli_import_options_title": "Tautulli-Importoptionen",
+  "tautulli_import_options_desc": "Wähle aus, wie VODUM historische Daten aus Tautulli importieren soll.",
+  "tautulli_keep_all_servers": "Alle Server behalten (not recommanded)",
+  "tautulli_keep_all_servers_desc": "Importiere den Plex-Server aus dieser Tautulli-DB auch dann, wenn er in VODUM noch nicht existiert. Wenn aktiviert, erstellt VODUM einen offline Plex-Server und importiert dorthin.",
+  "tautulli_keep_all_users": "Alle Benutzer behalten (not recommanded)",
+  "tautulli_keep_all_users_desc": "Importiere Benutzer auch dann, wenn sie in VODUM nicht existieren. Sie werden als abgelaufen erstellt, um E-Mails/Policies zu vermeiden.",
+  "confirm_start_import": "Bestätigen & starten",
+  "tautulli_select_file_first": "Bitte zuerst eine Tautulli-Datenbankdatei (.db) auswählen.",
+  "tautulli_import_tip": "Tipp: Du kannst dich abmelden — VODUM speichert das Ergebnis und zeigt es später an.",
+  "task.import_tautulli": "Tautulli-Verlauf importieren",
+  "task_description.import_tautulli": "Importiert den Wiedergabeverlauf aus einer Tautulli-Datenbank (tautulli.db).",
+  "task.expired_subscription_manager": "Verwaltung abgelaufener Abonnements",
+  "confirm_restore_title": "Wiederherstellung bestätigen",
+  "confirm_restore_hint": "Die aktuelle Datenbank wird überschrieben. Fortfahren?",
+  "db_size_hint": "Tamaño de la base de datos",
+  "campaign_body_placeholder": "Message…",
+  "campaign_title_placeholder": "Title (optional but recommended)",
+  "discord": "Discord",
+  "discord_bot_token": "Discord bot token",
+  "discord_campaign_note": "Campaigns are sent to users with Discord set. If a server is selected, only users linked to that server are targeted.",
+  "discord_enabled": "Discord enabled",
+  "discord_enabled_off": "Disabled",
+  "discord_enabled_on": "Enabled",
+  "discord_help_1": "To send DMs, VODUM needs a Discord bot token and each user's Discord ID.",
+  "discord_help_need_bot": "Create a bot in Discord Developer Portal and copy its token",
+  "discord_help_need_user_id": "Fill each user's Discord user ID (snowflake) in the user page",
+  "discord_help_title": "Discord help",
+  "discord_name": "Discord name",
+  "discord_note_tasks": "Discord tasks are enabled/disabled automatically with the switch.",
+  "discord_subtitle": "Discord notifications (DM) + campaigns",
+  "discord_template_hint": "Light Markdown DM",
+  "discord_token_help": "Token is stored in DB. Regenerate it if it leaked.",
+  "discord_user_id": "Discord user id",
+  "edit": "Edit",
+  "max_streams_override": "Max streams override",
+  "max_streams_override_help": "If set, this number supersedes max_streams_per_user policies for this user. 0 is allowed.",
+  "max_streams_override_placeholder": "Leave empty to use policies",
+  "no_history": "No messages sent.",
+  "policies_allow_local_ip": "Allow local IP (LAN)",
+  "policies_allow_local_ip_help": "Local/private IPs will not count toward stream/IP limits.",
+  "server_optional": "Server (optional)",
+  "task.check_update": "Check updates",
+  "task_description.check_update": "Checks GitHub to detect if an update is available.",
+  "task_description.send_campaign_discord": "Send pending Discord campaigns",
+  "task_description.send_expiration_discord": "Send expiration notifications via Discord",
+  "data_retention_years": "Daten löschen nach (Jahre)",
+"data_retention_years_help": "0 = unbegrenzt (Daten dauerhaft behalten)",
+"task_description.cleanup_data_retention": "Bereinigung alter Daten (Verlaufsspeicherung)",
+
+"tautulli_import_options": "Tautulli-Importoptionen",
+"tautulli_import_options_desc": "Wählen Sie, wie VODUM historische Daten aus Tautulli importieren soll.",
+
+"tautulli_target_server": "Zielserver",
+"tautulli_target_server_desc": "Server in VODUM, dem die importierten Daten zugeordnet werden.",
+
+"tautulli_libraries_policy": "Bibliotheksrichtlinie",
+"tautulli_libraries_policy_desc": "Festlegen, wie Bibliotheken beim Import behandelt werden.",
+
+"tautulli_import_only_available_libraries": "Nur vorhandene Bibliotheken importieren",
+"tautulli_import_only_available_libraries_desc": "Bibliotheken überspringen, die nicht in VODUM existieren.",
+
+"tautulli_keep_all_libraries": "Alle Bibliotheken behalten",
+"tautulli_keep_all_libraries_desc": "Alle Bibliotheken importieren, auch wenn sie nicht konfiguriert sind.",
+
+"tautulli_keep_all_users": "Alle Benutzer behalten (nicht empfohlen)",
+"tautulli_keep_all_users_desc": "Benutzer importieren, auch wenn sie nicht in VODUM existieren. Sie werden als abgelaufen erstellt, um E-Mails/Richtlinien nicht auszulösen.",
+
+"confirm_start": "Bestätigen & starten",
+"cancel": "Abbrechen"
+
+
+
 
 
 
