--- a/lang/es.json
+++ b/lang/es.json
@@ -57,7 +57,7 @@
   "auto_retention_info": "Información de retención automática",
   "available_backups": "Copias de seguridad disponibles",
   "back": "Volver",
-  "backup": "Copia de seguridad",
+  "backup": "Copia de seguridad e importación",
   "backup_create_error": "Error al crear la copia de seguridad: {error}",
   "backup_created": "Copia de seguridad creada: {name}",
   "backup_no_file": "No se proporcionó ningún archivo",
@@ -714,7 +714,84 @@
   "delete_after_expiry_days_help": "Elimina el acceso al servidor multimedia después de X días. Plex: el usuario no se elimina de Plex, solo se revocan los accesos a bibliotecas.",
   "user_id": "User ID",
   "task.stream_enforcer": "Controlador de transmisiones",
-  "task_description.stream_enforcer": "Aplica las políticas de streaming y controla las sesiones activas."
+  "task_description.stream_enforcer": "Aplica las políticas de streaming y controla las sesiones activas.",
+  "tautulli_import_title": "Importar Tautulli",
+  "tautulli_import_desc": "Sube tu archivo",
+  "tautulli_db_file_label": "Archivo de base de datos Tautulli (.db)",
+  "start_import": "Iniciar importación",
+  "tautulli_import_options_title": "Opciones de importación de Tautulli",
+  "tautulli_import_options_desc": "Elige cómo VODUM debe importar datos históricos desde Tautulli.",
+  "tautulli_keep_all_servers": "Mantener todos los servidores (not recommanded)",
+  "tautulli_keep_all_servers_desc": "Importa el servidor Plex referenciado por esta BD de Tautulli aunque no exista en VODUM. Si está activado, VODUM creará un servidor Plex sin conexión e importará ahí.",
+  "tautulli_keep_all_users": "Mantener todos los usuarios (not recommanded)",
+  "tautulli_keep_all_users_desc": "Importa usuarios aunque no existan en VODUM. Se crearán como caducados para evitar correos/policies.",
+  "confirm_start_import": "Confirmar e iniciar",
+  "tautulli_select_file_first": "Selecciona primero un archivo de base de datos Tautulli (.db).",
+  "tautulli_import_tip": "Consejo: puedes desconectarte — VODUM guardará el resultado y lo mostrará más tarde.",
+  "task.import_tautulli": "Importar historial de Tautulli",
+  "task_description.import_tautulli": "Importa el historial de visualización desde una base de datos de Tautulli (tautulli.db).",
+  "task.expired_subscription_manager": "Gestor de suscripciones caducadas",
+  "confirm_restore_title": "Confirmar restauración",
+  "confirm_restore_hint": "Esto sobrescribirá la base de datos actual. ¿Continuar?",
+  "campaign_body_placeholder": "Message…",
+  "campaign_title_placeholder": "Title (optional but recommended)",
+  "discord": "Discord",
+  "discord_bot_token": "Discord bot token",
+  "discord_campaign_note": "Campaigns are sent to users with Discord set. If a server is selected, only users linked to that server are targeted.",
+  "discord_enabled": "Discord enabled",
+  "discord_enabled_off": "Disabled",
+  "discord_enabled_on": "Enabled",
+  "discord_help_1": "To send DMs, VODUM needs a Discord bot token and each user's Discord ID.",
+  "discord_help_need_bot": "Create a bot in Discord Developer Portal and copy its token",
+  "discord_help_need_user_id": "Fill each user's Discord user ID (snowflake) in the user page",
+  "discord_help_title": "Discord help",
+  "discord_name": "Discord name",
+  "discord_note_tasks": "Discord tasks are enabled/disabled automatically with the switch.",
+  "discord_subtitle": "Discord notifications (DM) + campaigns",
+  "discord_template_hint": "Light Markdown DM",
+  "discord_token_help": "Token is stored in DB. Regenerate it if it leaked.",
+  "discord_user_id": "Discord user id",
+  "edit": "Edit",
+  "max_streams_override": "Max streams override",
+  "max_streams_override_help": "If set, this number supersedes max_streams_per_user policies for this user. 0 is allowed.",
+  "max_streams_override_placeholder": "Leave empty to use policies",
+  "no_history": "No messages sent.",
+  "policies_allow_local_ip": "Allow local IP (LAN)",
+  "policies_allow_local_ip_help": "Local/private IPs will not count toward stream/IP limits.",
+  "server_optional": "Server (optional)",
+  "task.check_update": "Check updates",
+  "task_description.check_update": "Checks GitHub to detect if an update is available.",
+  "task_description.send_campaign_discord": "Send pending Discord campaigns",
+  "task_description.send_expiration_discord": "Send expiration notifications via Discord",
+  "db_size_hint": "Database size",
+  "data_retention_years": "Eliminar datos después de (años)",
+"data_retention_years_help": "0 = ilimitado (conservar los datos indefinidamente)",
+"task_description.cleanup_data_retention": "Limpieza de datos antiguos (retención histórica)",
+
+"tautulli_import_options": "Opciones de importación Tautulli",
+"tautulli_import_options_desc": "Elige cómo VODUM debe importar los datos históricos desde Tautulli.",
+
+"tautulli_target_server": "Servidor de destino",
+"tautulli_target_server_desc": "Servidor de VODUM al que se asociarán los datos importados.",
+
+"tautulli_libraries_policy": "Política de bibliotecas",
+"tautulli_libraries_policy_desc": "Define cómo gestionar las bibliotecas durante la importación.",
+
+"tautulli_import_only_available_libraries": "Importar solo bibliotecas existentes",
+"tautulli_import_only_available_libraries_desc": "Ignorar bibliotecas que no existen en VODUM.",
+
+"tautulli_keep_all_libraries": "Conservar todas las bibliotecas",
+"tautulli_keep_all_libraries_desc": "Importar todas las bibliotecas incluso si no están configuradas.",
+
+"tautulli_keep_all_users": "Conservar todos los usuarios (no recomendado)",
+"tautulli_keep_all_users_desc": "Importar usuarios aunque no existan en VODUM. Se crearán como expirados para evitar activar correos/políticas.",
+
+"confirm_start": "Confirmar y comenzar",
+"cancel": "Cancelar"
+
+
+
+
 
 
 
