--- a/lang/it.json
+++ b/lang/it.json
@@ -57,7 +57,7 @@
   "auto_retention_info": "Informazioni sulla conservazione automatica",
   "available_backups": "Backup disponibili",
   "back": "Indietro",
-  "backup": "Backup",
+  "backup": "Backup e Importazione",
   "backup_create_error": "Errore durante la creazione del backup: {error}",
   "backup_created": "Backup creato: {name}",
   "backup_no_file": "Nessun file fornito",
@@ -714,7 +714,83 @@
   "delete_after_expiry_days_help": "Rimuove l’accesso al media server dopo X giorni. Plex: l’utente non viene eliminato da Plex, vengono revocate solo le condivisioni delle librerie.",
   "user_id": "User ID",
   "task.stream_enforcer": "Controllo streaming",
-  "task_description.stream_enforcer": "Applica le regole di streaming e controlla le sessioni attive."
+  "task_description.stream_enforcer": "Applica le regole di streaming e controlla le sessioni attive.",
+  "tautulli_import_title": "Importa Tautulli",
+  "tautulli_import_desc": "Carica il tuo file",
+  "tautulli_db_file_label": "File database Tautulli (.db)",
+  "start_import": "Avvia importazione",
+  "tautulli_import_options_title": "Opzioni importazione Tautulli",
+  "tautulli_import_options_desc": "Scegli come VODUM deve importare i dati storici da Tautulli.",
+  "tautulli_keep_all_servers": "Mantieni tutti i server (not recommanded)",
+  "tautulli_keep_all_servers_desc": "Importa il server Plex indicato da questo DB Tautulli anche se non esiste in VODUM. Se attivo, VODUM creerà un server Plex offline e importerà lì.",
+  "tautulli_keep_all_users": "Mantieni tutti gli utenti (not recommanded)",
+  "tautulli_keep_all_users_desc": "Importa utenti anche se non esistono in VODUM. Verranno creati come scaduti per evitare email/policies.",
+  "confirm_start_import": "Conferma e avvia",
+  "tautulli_select_file_first": "Seleziona prima un file database Tautulli (.db).",
+  "tautulli_import_tip": "Suggerimento: puoi disconnetterti — VODUM conserverà il risultato e lo mostrerà più tardi.",
+  "task.import_tautulli": "Importa cronologia Tautulli",
+  "task_description.import_tautulli": "Importa la cronologia di visione da un database Tautulli (tautulli.db).",
+  "task.expired_subscription_manager": "Gestore abbonamenti scaduti",
+  "confirm_restore_title": "Conferma ripristino",
+  "confirm_restore_hint": "Questo sovrascriverà il database corrente. Continuare?",
+  "db_size_hint": "Dimensione del database",
+  "campaign_body_placeholder": "Message…",
+  "campaign_title_placeholder": "Title (optional but recommended)",
+  "discord": "Discord",
+  "discord_bot_token": "Discord bot token",
+  "discord_campaign_note": "Campaigns are sent to users with Discord set. If a server is selected, only users linked to that server are targeted.",
+  "discord_enabled": "Discord enabled",
+  "discord_enabled_off": "Disabled",
+  "discord_enabled_on": "Enabled",
+  "discord_help_1": "To send DMs, VODUM needs a Discord bot token and each user's Discord ID.",
+  "discord_help_need_bot": "Create a bot in Discord Developer Portal and copy its token",
+  "discord_help_need_user_id": "Fill each user's Discord user ID (snowflake) in the user page",
+  "discord_help_title": "Discord help",
+  "discord_name": "Discord name",
+  "discord_note_tasks": "Discord tasks are enabled/disabled automatically with the switch.",
+  "discord_subtitle": "Discord notifications (DM) + campaigns",
+  "discord_template_hint": "Light Markdown DM",
+  "discord_token_help": "Token is stored in DB. Regenerate it if it leaked.",
+  "discord_user_id": "Discord user id",
+  "edit": "Edit",
+  "max_streams_override": "Max streams override",
+  "max_streams_override_help": "If set, this number supersedes max_streams_per_user policies for this user. 0 is allowed.",
+  "max_streams_override_placeholder": "Leave empty to use policies",
+  "no_history": "No messages sent.",
+  "policies_allow_local_ip": "Allow local IP (LAN)",
+  "policies_allow_local_ip_help": "Local/private IPs will not count toward stream/IP limits.",
+  "server_optional": "Server (optional)",
+  "task.check_update": "Check updates",
+  "task_description.check_update": "Checks GitHub to detect if an update is available.",
+  "task_description.send_campaign_discord": "Send pending Discord campaigns",
+  "task_description.send_expiration_discord": "Send expiration notifications via Discord",
+  "data_retention_years": "Elimina dati dopo (anni)",
+"data_retention_years_help": "0 = illimitato (conserva i dati per sempre)",
+"task_description.cleanup_data_retention": "Pulizia dei dati vecchi (conservazione cronologia)",
+
+"tautulli_import_options": "Opzioni di importazione Tautulli",
+"tautulli_import_options_desc": "Scegli come VODUM deve importare i dati storici da Tautulli.",
+
+"tautulli_target_server": "Server di destinazione",
+"tautulli_target_server_desc": "Server VODUM a cui associare i dati importati.",
+
+"tautulli_libraries_policy": "Politica delle librerie",
+"tautulli_libraries_policy_desc": "Definisce come gestire le librerie durante l'importazione.",
+
+"tautulli_import_only_available_libraries": "Importa solo librerie esistenti",
+"tautulli_import_only_available_libraries_desc": "Ignora le librerie che non esistono in VODUM.",
+
+"tautulli_keep_all_libraries": "Mantieni tutte le librerie",
+"tautulli_keep_all_libraries_desc": "Importa tutte le librerie anche se non configurate.",
+
+"tautulli_keep_all_users": "Mantieni tutti gli utenti (non consigliato)",
+"tautulli_keep_all_users_desc": "Importa utenti anche se non esistono in VODUM. Verranno creati come scaduti per evitare attivazione di email/politiche.",
+
+"confirm_start": "Conferma e avvia",
+"cancel": "Annulla"
+
+
+
 
 
 
